src/rules/snapshots/pg_migration_lint__rules__pgm019__tests__rename_existing_table_fires.snap
---
source: src/rules/pgm019.rs
assertion_line: 144
expression: findings
---
- rule_id: PGM019
  severity: Info
  message: "Renaming existing table 'orders' to 'orders_archive' will break all queries, views, and functions referencing the old name."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
